Basic UI Layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,25 @@
   </head>
   <body>
   <header>
-  <div>
+  <div id=devise_notifications>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </div>
+  <div class="container">
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Search</li>
-        <li>Saved</li>
-        <li>My Profile</li>
+        <li><a href="floop">Home</a></li>
+        <li><a href="floop">Search</a></li>
+        <li><a href="floop">Saved</a></li>
+        <li><a href="floop">My Profile</a></li>
       </ul>
     </nav>
   </div>
   </header>
     <%= yield %>
+    <footer>
+        <p>BE, Copyright &copy; 2019</p>
+        <p>Michael Twitt & Matthew Leacy</p>
+    </footer>
   </body>
 </html>
