--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+ header{
+    background:#35424A;
+    color: #ffffff;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: #e8491d;
+}
+
+ header li{
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+}
+
+header nav{
+    float: right;
+    margin-top: 10px;
+
+}
+
+header a:hover{
+    color: #35424A;
+    font-weight: bold;
+    background-color: lightblue;
+    border-radius: 20%;
+}
+
+header a{
+    color: lightblue;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+body{
+    font-family: Raleway, sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    padding: 0;
+    margin: 0;
+    background-color: #f4f4f4;
+}
+
+footer{
+    padding: 20px;
+    color: white;
+    background-color: #e8491d;
+    text-align: center;
+    margin-top: 20px;
+}
