--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,7 +59,7 @@ body{
 footer{
     padding: 20px;
     color: white;
-    background-color: #e8491d;
+    background-color: skyblue;
     text-align: center;
     margin-top: 20px;
 }
