--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -24,6 +24,7 @@
   <strong>Status:</strong>
   <%= @listing.status %>
 </p>
-
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
+<% if user_signed_in? && @listing.user == current_user %>
+  <%= link_to 'Edit', edit_listing_path(@listing) %>
+<% end  %>
 <%= link_to 'Back', listings_path %>
