Sidebar added to home page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -36,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<a id="List_link_homepage" href=<%= link_to 'New Listing', new_listing_path %></a>
