--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,58 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
   <body>
   <header>
   <div id=devise_notifications>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </div>
-  <div class="container">
-    <nav>
-      <ul>
-        <li><a href="floop">Home</a></li>
-        <li><a href="floop">Search</a></li>
-        <li><a href="floop">Saved</a></li>
-        <li><a href="floop">My Profile</a></li>
-      </ul>
-    </nav>
+
+  <nav class="navbar">
+    <span class="open-menu">
+      <a href="#" onclick="openSideMenu()">
+        <svg width="30" height="30">
+          <path d="M0,5 30,5" stroke="#fff" stroke-width="5"/>
+          <path d="M0,14 30,14" stroke="#fff" stroke-width="5"/>
+          <path d="M0,23 30,23" stroke="#fff" stroke-width="5"/>
+        </svg>
+      </a>
+    </span>
+
+    <ul class="navbar-nav">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Search</a></li>
+      <li><a href="#">Saved</a></li>
+      <li><a href="#">My Profile</a></li>
+    </ul>
+  </nav>
+
+  <div id="side-menu" class="side-nav">
+    <a href="#" class="close-butn" onclick="closeSideMenu()">&times;</a>
+      <a href="#">Home</a>
+      <a href="#">Search</a>
+      <a href="#">Saved</a>
+      <a href="#">My Profile</a>
   </div>
+
+  <div id="main">
+  <h1>Username</h1>
+  </div>
+
+  <script>
+    function openSideMenu() {
+      document.getElementById('side-menu').style.width = '250px';
+      document.getElementById('main').style.marginLeft = '250px';
+    }
+  </script>
+  
+  <script>
+    function closeSideMenu() {
+      document.getElementById('side-menu').style.width = '0';
+      document.getElementById('main').style.marginLeft = '0';
+    }
+  </script>
   </header>
     <%= yield %>
     <footer>
