--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,13 +6,17 @@
 </p>
 
 <p>
+  <strong>Price:</strong>
+  <%= @listing.price %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @listing.description %>
 </p>
 
 <p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
+  <strong>Lender:</strong>
 </p>
 
 <p>
