--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -15,7 +15,6 @@
       <th>Title</th>
       <th>Description</th>
       <th>Price</th>
-      <th>Image</th>
       <th>Status</th>
       <th colspan="3"></th>
     </tr>
@@ -39,5 +38,4 @@
 </table>
 
 <br>
-
-<a id="List_link_homepage" href=<%= link_to 'New Listing', new_listing_path %></a>
+<%= link_to 'new listing', new_listing_path %>
