--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,8 @@ body {
     background-color: #3b5998;
     overflow: hidden;
     height: 63px;
+    margin-top: 0px;
+    position: relative;
 }
 
 .navbar a {
@@ -116,13 +118,26 @@ footer {
     margin-top: 20px;
 }
 
-#main{
+#main {
     transition: margin-left 0.5s;
     padding: 10px;
     overflow: hidden;
     width: 100%;
 }
 
-#main h1{
+#main h1 {
     margin-left: 0px;
+    float: left;
+}
+
+#sign-uio {
+    float: right;
+    margin-right: 30px;
+    margin-top: 30px;
+}
+
+header#devise-notifications .notice {
+    text-decoration: none;
+    opacity: 0;
+    transition: opacity 2s;
 }
