--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,22 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listings</h1>
-
-<% if user_signed_in? %>
-  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to 'Sign up', new_user_registration_path %>
-  <%= link_to 'Sign in', new_user_session_path %>
-<% end %>
+<h1>Home</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Image</th>
-      <th>Status</th>
+      <th>Product name</th>
+      <th>Product price</th>
+      <th>Product description</th>
+      <th>Product image</th>
+      <th>Product duration</th>
+      <th>Order status</th>
+      <th>User name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,15 +19,16 @@
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
-        <td><%= listing.title %></td>
-        <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
-        <td><%= listing.status %></td>
+        <td><%= listing.product_name %></td>
+        <td><%= listing.product_price %></td>
+        <td><%= listing.product_description %></td>
+        <td><%= listing.product_image %></td>
+        <td><%= listing.product_duration %></td>
+        <td><%= listing.order_status %></td>
+        <td><%= listing.user_name %></td>
         <td><%= link_to 'Show', listing %></td>
-        <% if user_signed_in? && current_user == listing.user %>
-          <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-          <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
+        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
