--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -136,8 +136,6 @@ footer {
     margin-top: 30px;
 }
 
-header#devise-notifications .notice {
+#devise-notifications p.notice {
     text-decoration: none;
-    opacity: 0;
-    transition: opacity 2s;
 }
