--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,14 +21,19 @@ pre {
 
 a {
   color: #000;
+  text-decoration: none;
+  padding: 5px;
+  text-align: start;
+  margin-left: 5px;
 
   &:visited {
     color: lightblue;
+    background-color: #3b5998;
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: black;
+    background-color: orangered;
   }
 }
 
