--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Home</h1>
 
 <table>
@@ -31,4 +29,4 @@
 </table>
 
 <br>
-<%= link_to 'new listing', new_listing_path %>
+<%= link_to 'New Listing', new_listing_path %>
