--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Home</h1>
+<h1>Listings</h1>
+
+<%= form_tag(listings_path, method: :get) do %>
+  <%= text_field_tag :term, params[:term] %>
+  <%= submit_tag 'Search', title: nil %>
+<% end %>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
-      <th>Description</th>
       <th>Price</th>
+      <th>Description</th>
       <th>Status</th>
       <th colspan="3"></th>
     </tr>
