--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -33,9 +33,8 @@ a {
 
   &:hover {
     color: white;
-    background-color: orangered;
-    transform: scale(0.8);
-    transition: 0.5s;
+    background-color: #3b5998;
+    transition: 0.4s ease;
   }
 }
 
