--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -13,22 +13,22 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, placeholder: "Title"%>
   </div>
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description, placeholder: "Include term details, condition, etc."%>
   </div>
 
   <div class="field">
     <%= form.label :price %>
-    <%= form.text_field :price %>
+    <%= form.text_field :price, placeholder: "Price per day" %>
   </div>
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.text_field :image %>
+    <%= form.text_field :image, placeholder: "Enter image URL"%>
   </div>
 
   <div class="actions">
