--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -29,6 +29,39 @@
   <div class="field">
     <%= form.label :image %>
     <%= form.text_field :image, placeholder: "Enter image URL"%>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <div class="card">
+    <img src="../app/assets/images/portrait.jpg" id="image-preview">
+    <label class="image-upload-container" for="image-upload">
+      <input id="image-upload" type="file" style="display:none;"> Select an Image </label>
+      <script>
+      var CLOUDINARY_URL = 'https://api.cloudinary.com/v1_1/di64ard5q/upload';
+      var CLOUDINARY_UPLOAD_PRESET = 'p0ialzu3';
+      var imgPreview = document.getElementById('image-preview');
+      var imgUpload = document.getElementById('image-upload');
+
+      imgUpload.addEventListener('change', function(event) {
+        var file = event.target.files[0];
+          var formData = new FormData();
+          formData.append('file', file);
+          formData.append('upload_preset', CLOUDINARY_UPLOAD_PRESET);
+
+        axios({
+          url: CLOUDINARY_URL,
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
+          data: formData
+        }).then(function(res) {
+          console.log(res);
+          imgPreview.src = res.data.secure_url
+        }).then(function(err) {
+          console.log(err);
+        });
+      });
+      </script>
+    </div>
   </div>
 
   <div class="actions">
