--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -23,7 +23,7 @@
   <%= @listing.status %>
 </p>
 
-<div id:"lender_profile">
+<div id="lender_profile">
   <ul>
     <li><%= link_to "#{User.find(@listing.user_id).email}", listings_path %></li>
     <li><%= @profile.user_name %></li>
