--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -36,7 +36,7 @@
 
 <% if user_signed_in? && @listing.user != current_user %>
   <div id="rent_button">
-    <%= link_to "RENT NOW", controller: 'order', action: 'show', id: @listing.id %>
+    <%= link_to "RENT NOW", controller: 'orders', action: 'new', listing_id: @listing.id %>
   </div>
 <% end %>
 
