--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Listings</h1>
-
+<!-- Headings -->
 <table>
   <thead>
     <tr>
@@ -11,7 +11,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+<!-- Body of the Table -->
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
@@ -20,7 +20,9 @@
         <td><%= listing.description %></td>
         <td><%= listing.status %></td>
         <td><%= link_to 'Show', listing %></td>
-        <% if user_signed_in? && current_user == listing.user %>
+        <!-- If the User's own listings show up, they'll have the option to edit or destroy the listing. -->
+        <!-- If it doesn't belong to the current user the options are hidden -->
+        <% if user_signed_in? && current_user == listing.user %> 
           <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
           <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
