--- a/app/views/order/show.html.erb
+++ b/app/views/order/show.html.erb
@@ -8,6 +8,7 @@
   <%= @listing.price %>
 </p>
 
+<!-- Creates an order containing the current listing -->
 <%= form_with(controller: 'order', action: 'new', listing_id: @listing.id, method: 'post') do |form|%>
     <%= form.number_field :duration, value: 1 %>
     <div><%= submit_tag 'Order' %></div>
