--- a/app/views/order/new.html.erb
+++ b/app/views/order/new.html.erb
@@ -1,3 +1,4 @@
+<!-- Integrate the payment system for the app -->
 <script src="https://js.stripe.com/v3/"></script>
 <script>
 var stripe = Stripe(ENV['STRIPE_API_KEY_PK']);
