--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,3 +1,4 @@
+<!-- Constructs an error explanation -->
 <%= form_with(model: profile, local: true) do |form| %>
   <% if profile.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +11,7 @@
       </ul>
     </div>
   <% end %>
-
+<!-- Form fields -->
   <div class="field">
     <%= form.label :user_name %>
     <%= form.text_field :user_name %>
