--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -11,7 +11,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+<!-- Allows the user to edit or delete their own profile -->
   <tbody>
     <% @profiles.each do |profile| %>
       <tr>
